user model extended to meet requirements plus minor fixes

--- a/tennis_system_project/templates/tennis/register.html
+++ b/tennis_system_project/templates/tennis/register.html
@@ -6,7 +6,7 @@
    </head>
 
     <body>
-        <h1>About Page</h1>
+        <h1>Registration</h1>
         {% if registered %}
             <strong> Thank you for registering</strong>
             <a href="{% url 'index' %}"> Return to homepage </a><br />
