user log in page and functionality added

--- a/tennis_system_project/templates/tennis/index.html
+++ b/tennis_system_project/templates/tennis/index.html
@@ -19,6 +19,8 @@
             <a href="/tennis/about/"> About </a>
             <br>
             <a href="/tennis/register/"> Register </a>
+            <br>
+            <a href="/tennis/login/"> Login </a>
  <br />
         </div>
     </body>
