--- a/tennis_system_project/templates/tennis/index.html
+++ b/tennis_system_project/templates/tennis/index.html
@@ -16,11 +16,15 @@
             <img src="{% static "images/tennisball.jpg" %}" alt="Picture of ball" />
         </div>
 	<div>
-            <a href="/tennis/about/"> About </a>
-            <br>
-            <a href="/tennis/register/"> Register </a>
-            <br>
-            <a href="/tennis/login/"> Login </a>
+            <ul>
+            {% if user.is_authenticated %}
+                <li><a href="{% url 'logout' %}"> Logout </a></li>
+            {% else %}
+                <li><a href="{% url 'login' %}"> Sign In </a></li>
+                <li><a href="{% url 'register' %}"> Sign Up</a></li>
+            {% endif %}
+                <li><a href="{% url 'about' %}"> About </a></li>
+            </ul>
  <br />
         </div>
     </body>
