--- a/tennis_system_project/templates/tennis/register.html
+++ b/tennis_system_project/templates/tennis/register.html
@@ -1,18 +1,19 @@
-<!DOCTYPE html>
-<html>
+{% extends 'tennis/base.html' %}
+{% load staticfiles %}
 
-   <head>
-       Register
-   </head>
+{% block body_block%}
+
+   {% block title_block %}
+        Registration
+    {% endblock %}
 
     <body>
-        <h1>Registration</h1>
+        <h1>Register Here</h1>
         {% if registered %}
             <strong> Thank you for registering</strong>
             <a href="{% url 'index' %}"> Return to homepage </a><br />
 
         {% else %}
-            <strong>Register here!</strong>
             <form id="user_form" method="post" action="{% url 'register' %}" enctype="multipart/form-data">
 
             {% csrf_token %}
@@ -25,9 +26,8 @@
             <input type="submit" name="submit" value="Register" />
         </form>
         {% endif %}
-        <a href="/tennis/"> Home </a>
     </body>
-</html>
+{% endblock %}
         
         
 
