--- a/tennis_system_project/templates/tennis/about.html
+++ b/tennis_system_project/templates/tennis/about.html
@@ -1,21 +1,16 @@
-<!DOCTYPE html>
+{% extends 'tennis/base.html' %}
 
-{% load staticfiles %}
-
-<html>
+{% block body_block%}
     
-    <head>
-        <title>About the Tennis System</title>
-    </head>
+    {% block title_block %}
+        About the Tennis System
+    {% endblock %}
 
     <body>
         <h1> Cool title </h1>
         <div>
             Some info here <br />
         </div>
-	<div>
-            <a href="/tennis/"> Home </a> <br />
-        </div>
     </body>
 
-</html>
+{% endblock %}
