--- a/tennis_system_project/templates/tennis/base.html
+++ b/tennis_system_project/templates/tennis/base.html
@@ -17,9 +17,14 @@
         <hr />
         <div>
             <ul>
-                <li><a href="{%url 'about'%}">About</a></li>
-                <li><a href="{%url 'index'%}">Home</a></li>
+            {% if user.is_authenticated %}     
+                <li><a href="{% url 'logout' %}"> Log Out </a></li>
+            {% else %}
                 <li><a href="{%url 'register'%}">Sign Up</a></li>
+                <li><a href="{%url 'login'%}">Log In</a></li>
+            {% endif %}
+                <li><a href="{%url 'index'%}">Home</a></li>
+                <li><a href="{%url 'about'%}">About</a></li>
             </ul>
         </div>
     </body>
