--- a/tennis_system_project/templates/tennis/index.html
+++ b/tennis_system_project/templates/tennis/index.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
-
+{% extends 'tennis/base.html' %}
 {% load staticfiles %}
 
-<html>
+{% block body_block%}
     
-    <head>
-        <title>Tennis System</title>
-    </head>
+    {% block title_block %}
+        Tennis System
+    {% endblock %}
 
     <body>
         <h1> This is a header </h1>
@@ -15,18 +14,7 @@
             <strong>{{ boldmessage }}</strong><br />
             <img src="{% static "images/tennisball.jpg" %}" alt="Picture of ball" />
         </div>
-	<div>
-            <ul>
-            {% if user.is_authenticated %}
-                <li><a href="{% url 'logout' %}"> Logout </a></li>
-            {% else %}
-                <li><a href="{% url 'login' %}"> Sign In </a></li>
-                <li><a href="{% url 'register' %}"> Sign Up</a></li>
-            {% endif %}
-                <li><a href="{% url 'about' %}"> About </a></li>
-            </ul>
- <br />
-        </div>
+	
     </body>
 
-</html>
+{% endblock %}
