--- a/tennis_system_project/templates/tennis/base.html
+++ b/tennis_system_project/templates/tennis/base.html
@@ -34,6 +34,9 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url 'logout' %}">Log out</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'add_player' %}">Add Child </a>
+        </li>
         {% else %}
         <li class="nav-item">
           <a class="nav-link" href="{%url 'register'%}">Register</a>
