--- a/tennis_system_project/templates/tennis/add_player.html
+++ b/tennis_system_project/templates/tennis/add_player.html
@@ -10,16 +10,20 @@
     <body>
         <h1> Add a Player </h1>
         <div>
-            <form id="player_form" method="post" action="tennis/add_player/">
+            <form id="player_form" method="post" action="/tennis/add_player/">
                {% csrf_token %}
                {% for hidden in form.hidden_fields %}
                   {{ hidden }}
                {% endfor %}
                {% for field in form.visible_fields %}
                   {{field.errors}}
-                  {{field}}
                {% endfor %}
-               <input type="submit" name="submit" value="Add Player"/>
+               <p>{{ form.fname.label_tag }} {{ form.fname }}</p>
+               <p>{{ form.sname.label_tag }} {{ form.sname }}</p>
+               <p>{{ form.medicalcons.label_tag }} {{ form.medicalcons }}</p>
+               <p>{{ form.btmno.label_tag }} {{ form.btmno }}</p>
+               <p>{{ form.dob.label_tag }} {{ form.dob }}</p>
+               <input type="submit" name="submit" value="Add_Player"/>
              </form>
         </div>
 	
