Attempt at booking form, not currently working

--- a/tennis_system_project/templates/tennis/add_player.html
+++ b/tennis_system_project/templates/tennis/add_player.html
@@ -23,7 +23,7 @@
                <p>{{ form.medicalcons.label_tag }} {{ form.medicalcons }}</p>
                <p>{{ form.btmno.label_tag }} {{ form.btmno }}</p>
                <p>{{ form.dob.label_tag }} {{ form.dob }}</p>
-               <input type="submit" name="submit" value="Add_Player"/>
+               <input type="submit" name="submit" value="Add Player"/>
              </form>
         </div>
 	
