--- a/tennis_system_project/templates/tennis/base.html
+++ b/tennis_system_project/templates/tennis/base.html
@@ -15,8 +15,9 @@
       {% endblock %} 
     </title>
 
-    <link href="http://v4-alpha.getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="http://v4-alpha.getbootstrap.com/examples/starter-template/starter-template.css" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/tennis.css' %}">
   </head>
   
 
@@ -30,7 +31,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"> Tennis System </a>
+          <a class="navbar-brand" href="#"> Western Tennis Club </a>
         </div>
       <ul class="nav navbar-nav">
         <li class="nav-item active">
