--- a/tennis_system_project/templates/tennis/index.html
+++ b/tennis_system_project/templates/tennis/index.html
@@ -4,15 +4,14 @@
 {% block body_block%}
     
     {% block title_block %}
-        Tennis System
+        Western Tennis Club
     {% endblock %}
 
     <body>
-        <h1> This is a header </h1>
+        <h1> Welcome to the Western Tennis Club </h1>
         <div>
-            Home page <br />
-            <strong>{{ boldmessage }}</strong><br />
-            <img src="{% static "images/tennisball.jpg" %}" alt="Picture of ball" />
+            Log in to get started.
+            
         </div>
         {% if players %}
             <ul>
