--- a/tennis_system_project/templates/tennis/add_player.html
+++ b/tennis_system_project/templates/tennis/add_player.html
@@ -9,6 +9,8 @@
 
     <body>
         <h1> Add a Player </h1>
+        Fields marked with a * are required
+        <br/>
         <div>
             <form id="player_form" method="post" action="/tennis/add_player/">
                {% csrf_token %}
