--- a/tennis_system_project/templates/tennis/base.html
+++ b/tennis_system_project/templates/tennis/base.html
@@ -52,7 +52,7 @@
         </li>
         {% if user.is_staff %}
           <li class="nav-item">
-          <a class="nav-link" href="{% url 'add_player' %}">HELLO STAFF</a>
+          <a class="nav-link" href="{% url 'make_event' %}">Add New Event</a>
           </li>
         {% endif %}
         {% else %}
