--- a/tennis_system_project/templates/tennis/index.html
+++ b/tennis_system_project/templates/tennis/index.html
@@ -11,7 +11,8 @@
         <h1> Welcome to the Western Tennis Club </h1>
         <div>
             Log in to get started.
-            
+            <br>
+            Once logged in, you will be able to access new buttons.
         </div>
         {% if players %}
             <ul>
