--- a/tennis_system_project/templates/tennis/make_booking.html
+++ b/tennis_system_project/templates/tennis/make_booking.html
@@ -17,7 +17,7 @@
                {% for field in event_form.visible_fields %}
                   {{field.errors}}
                {% endfor %}
-               <p>{{ event_form.event.label_tag }} {{ form.event }}</p>
+               <p>{{ event_form.event.label_tag }} {{ event_form.event }}</p>
                <input type="submit" name="book" value="Book"/>
              </form>
         </div>
