Make booking will kinda show an item but not with the right name and add event shows an input field but won't submit

--- a/tennis_system_project/templates/tennis/make_event.html
+++ b/tennis_system_project/templates/tennis/make_event.html
@@ -17,7 +17,7 @@
                {% for field in add_form.visible_fields %}
                   {{field.errors}}
                {% endfor %}
-               <p>{{ add_form.event.label_tag }} {{ add_form.event }}</p>
+               <p>{{ add_form.eName.label_tag }} {{ add_form.eName }}</p>
                <input type="submit" name="add" value="Add"/>
              </form>
         </div>
