--- a/tennis_system_project/templates/tennis/register.html
+++ b/tennis_system_project/templates/tennis/register.html
@@ -14,7 +14,7 @@
             <a href="{% url 'index' %}"> Return to homepage </a><br />
 
         {% else %}
-            <form id="user_form" method="post" action="{% url 'register' %}" enctype="multipart/form-data">
+            <form id="user_form" method="post" action="{% url 'register' %}">
 
             {% csrf_token %}
 
