--- a/tennis_system_project/templates/tennis/add_player.html
+++ b/tennis_system_project/templates/tennis/add_player.html
@@ -10,6 +10,7 @@
     <body>
         <h1> Add a Player </h1>
         Fields marked with a * are required
+        If player is added successfully, you will be redirected to home page.
         <br/>
         <div>
             <form id="player_form" method="post" action="/tennis/add_player/">
