Minor css additions

--- a/tennis_system_project/templates/tennis/base.html
+++ b/tennis_system_project/templates/tennis/base.html
@@ -18,6 +18,7 @@
     <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="http://v4-alpha.getbootstrap.com/examples/starter-template/starter-template.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/tennis.css' %}">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
   </head>
   
 
