--- a/tennis_system_project/templates/tennis/index.html
+++ b/tennis_system_project/templates/tennis/index.html
@@ -8,11 +8,11 @@
     {% endblock %}
 
     <body>
-        <h1> Welcome to the Western Tennis Club </h1>
-        <div>
-            Log in to get started.
+        <h1 class="text-center"> Welcome to the Western Tennis Club </h1>
+        <div class="w3-panel w3-border w3-border-green">
+            <center> Log in to get started. <center>
             <br>
-            Once logged in, you will be able to access new buttons.
+            <center> Once logged in, you will be able to access new buttons. </centre>
         </div>
         {% if players %}
             <ul>
