Logo added to front page and info added to about page

--- a/tennis_system_project/templates/tennis/about.html
+++ b/tennis_system_project/templates/tennis/about.html
@@ -1,4 +1,5 @@
 {% extends 'tennis/base.html' %}
+{% load staticfiles %}
 
 {% block body_block%}
     
@@ -7,10 +8,11 @@
     {% endblock %}
 
     <body>
-        <h1> Cool title </h1>
-        <div>
-            Some info here <br />
+        <center><h1> About the Club </h1></center>
+        <div class="w3-panel w3-border w3-border-green">
+            <center> In the heart of Glasgow's West End, the Western Health & Racquets Club is the ideal place for everyone to play sport, get fit and have a good time. We offer social tennis & squash plus coaching for all standards/ages. </center> <br />
         </div>
+        <center><img src="{% static "images/club.jpg" %}" alt="Club grounds" /></center>
     </body>
 
 {% endblock %}
