--- a/tennis_system_project/templates/tennis/index.html
+++ b/tennis_system_project/templates/tennis/index.html
@@ -9,6 +9,7 @@
 
     <body>
         <h1 class="text-center"> Welcome to the Western Tennis Club </h1>
+        <center><img src="{% static "images/rsz_logo.gif" %}" alt="Club logo" /></center>
         <div class="w3-panel w3-border w3-border-green">
             <center> Log in to get started. <center>
             <br>
