--- a/tennis_system_project/templates/tennis/login.html
+++ b/tennis_system_project/templates/tennis/login.html
@@ -4,9 +4,7 @@
 {% block body_block%}
 
    <link href="http://v4-alpha.getbootstrap.com/examples/signin/signin.css" rel="stylesheet">
-   <div class="jumbotron">
-      <h1 class="display-3"> Login </h1>
-   </div>
+   <h1> Login </h1>
 
    <form class="form-signin" role="form" method="post" action=".">
       {% csrf_token %}
@@ -17,5 +15,13 @@
       <input type="password" name="password" id="id_password" class="form-control" placeholder="Password" required>
       <button class="btn btn-lg btn-primary btn-block" type="submit" value="Submit" />Sign in</button>
   </form>
+
+  {% if messages %}
+       <ul class="messages">
+           {% for message in messages %}
+               <li class="{{ message.tags }}">{{ message }}</li>
+           {% endfor %}
+       </ul>
+  {% endif %}
 
 {% endblock %}
